[ADD]채굴 모니터링 API 추가
